--- a/src/style/Profile.css
+++ b/src/style/Profile.css
@@ -288,7 +288,7 @@ article p {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0;
-    margin: 0;
+    margin: 0 auto;
     height: 260px;
   }
 
