--- a/src/style/Profile.css
+++ b/src/style/Profile.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Gasoek+One&family=Jua&family=Yeon+Sung&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Gasoek+One&family=Jua&family=Yeon+Sung&display=swap'); */
 
 /* 전체 컨테이너 */
 .container {
@@ -12,11 +12,9 @@
 }
 
 .container header {
-  /* background-color: #131230; */
   background-color: #315288;
   color: #ffff;
   text-align: center;
-  font-family: 'Jua', sans-serif;
   border-bottom: 1px solid #131230;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
@@ -30,7 +28,7 @@ aside {
 
 aside strong {
   text-decoration: underline;
-  font-size: 1em;
+  font-size: 1rem;
   margin: 0;
   padding: 0;
 }
@@ -170,6 +168,10 @@ article p {
   font-weight: 700;
 }
 
+.section_right span:hover {
+  color: white;
+}
+
 /* 반응형 웹 */
 @media (max-width: 820px) {
   .container {
@@ -271,17 +273,17 @@ article p {
 @media (max-width: 510px) and (min-width: 360px) {
   .container {
     margin-top: 15%;
-    width: 85%;
+    width: 100%;
   }
   header h3 {
     display: none;
   }
   aside strong {
-    font-size: 10px;
+    font-size: 14.5px;
   }
 
   aside p {
-    font-size: 12px;
+    font-size: 14.5px;
   }
 
   main {
@@ -337,18 +339,24 @@ article p {
   }
 
   .section_left {
-    font-size: 12px;
+    font-size: 15px;
   }
 
   .section_right span {
     text-decoration: underline;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 17px;
     margin-right: 5px;
   }
 
   .section_right p {
-    font-size: 12px;
+    font-size: 15.5px;
+  }
+
+  .section,
+  .section00 {
+    margin: 0 auto;
+    width: 100%;
   }
 
   .a_p {
@@ -358,4 +366,27 @@ article p {
   .footer h2 {
     font-size: 16px;
   }
+}
+
+/* 모달 화면============================================ */
+.modal_container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5%;
+  border: solid 10px gold;
+  width: 340px;
+  height: 75%;
+  margin: 0 auto;
+  z-index: 1000;
+}
+
+.modal_container img {
+  width: 100%;
+  height: 100%;
 }
