--- a/src/style/TopNav.module.css
+++ b/src/style/TopNav.module.css
@@ -1,12 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Poetsen+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
-
 .TN {
   position: fixed;
   top: 0;
@@ -78,10 +69,6 @@ strong:hover,
   margin-right: 10px;
 }
 
-.imgp {
-  font-family: 'Black Han Sans', sans-serif;
-}
-
 @media (max-width: 690px) {
   .TN_left strong {
     font-size: 16px;
@@ -94,20 +81,30 @@ strong:hover,
 
 @media (max-width: 468px) {
   .TN_left strong {
-    font-size: 13px;
+    font-size: 13.5px;
   }
 
   .top_p {
-    font-size: 10px;
+    font-size: 10.5px;
   }
 }
 
 @media (max-width: 391px) {
   .TN_left strong {
-    font-size: 11px;
+    font-size: 15px;
   }
 
   .top_p {
-    font-size: 9px;
+    font-size: 12px;
+  }
+
+  .TN_sub {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+    margin: 0 auto;
+    height: 2.5rem;
   }
 }
