--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
 
 :root {
   margin: 0;
-  font-family: 'Poetsen One', sans-serif;
+  font-family: 'Poetsen One', 'Jua', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Jua', sans-serif;
 }
 
 a {
